--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500&display=swap');
+
+* {
+    margin: 0;
+    font-family: 'Fira Code', monospace;
+}
+
+.text-c1 {
+    color: #38BDAE;
+}
+
+.background-c1 {
+    background-color: #38BDAE;
+}
+
+.border-c1 {
+    border: 2px solid #38BDAE;
+}
+
+.border-thick-c1 {
+    border: 5px solid #38BDAE;
+}
