--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,7 @@
 #main {
     padding: 5rem;
     height:5000px;
-    z-index: 1;
+    position: relative;
 }
 
 /* .section {
@@ -19,7 +19,6 @@
     background-color: #000000;
     background-size: cover;
     background-position: center;
-    z-index: -2;
 }
 
 #bg-dynamic {
@@ -35,5 +34,4 @@
     background-position-x: -1400px;
     background-size: 200%;
     background-position-y: -3000px;
-    z-index: -1;
 }
