--- a/src/app/title/title.component.css
+++ b/src/app/title/title.component.css
@@ -1,3 +1,7 @@
+#title-div {
+    min-height: 80vh
+}
+
 #name {
     font-size: 5rem;
     font-weight: 500;
@@ -8,9 +12,22 @@
     font-weight: 300
 }
 
+.title-social {
+    font-size: 2rem;
+}
+
 #portrait-img {
     aspect-ratio: 1;
     object-fit: cover;
     object-position: top;
-    margin-right: 10rem;
+    margin-right: 10%;
+    width: 25rem;
+}
+
+#scroll-down-chevron {
+    position: absolute;
+    top: 84vh;
+    left: 46vw;
+    aspect-ratio: 1;
+    height: max(8vh, 50px);
 }
