--- a/src/app/title/title.component.html
+++ b/src/app/title/title.component.html
@@ -1,20 +1,30 @@
-<div>
+<div id="title-div">
     <div
         [ngStyle]="{ marginTop: '10rem' }"
-        class="d-flex justify-content-between align-items-center"
+        class="d-flex justify-content-between align-items-center flex-wrap flex-row-reverse"
     >
-        <div>
-            <h1 class="text-c1" id="name">Sameer Narendran</h1>
-            <p class="text-c1" id="tagline">I like to build things</p>
-        </div>
         <img
             src="{{ imgpath }}"
             id="portrait-img"
-            class="w-25 rounded-circle border-thick-c1"
+            class="rounded-circle border-thick-c1"
             alt="my portrait"
         />
+        <div>
+            <h1 class="text-c1" id="name">Sameer Narendran</h1>
+            <p class="text-c1" id="tagline">I like to build things</p>
+            <div id="title-socials-div" class="text-light d-flex">
+                <a *ngFor="let s of this.socials" [href]="s.url" target="_blank" class="me-4">
+                <fa-icon
+                    class="title-social"
+                    [icon]="s.icon"
+                ></fa-icon>
+                </a>
+            </div>
+        </div>
     </div>
-    <div [ngStyle]="{ marginTop: '10rem' }" class="text-center">
-        <img id="scroll-down-chevron" src="{{ 'assets/images/down_chevron.png' }}" />
-    </div>
+    <img
+        id="scroll-down-chevron"
+        (click)="this.scrollTo('#toc-div')"
+        src="{{ 'assets/images/down_chevron.png' }}"
+    />
 </div>
