--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,11 @@
     font-family: 'Fira Code', monospace;
 }
 
+a {
+    color: inherit;
+    text-decoration: inherit;
+}
+
 .text-c1 {
     color: #38BDAE;
 }
