--- a/src/app/title/title.component.html
+++ b/src/app/title/title.component.html
@@ -19,6 +19,9 @@
                     [icon]="s.icon"
                 ></fa-icon>
                 </a>
+                <a [href]="resumeURL" target="_blank">
+                    <p class="title-social" >Resume</p>
+                </a>
             </div>
         </div>
     </div>
