--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,10 @@
     <div id="main">
         <app-title />
         <app-toc />
+        <app-skills />
+        <app-experience />
+        <app-projects />
+        <app-footer />
     </div>
     
 </div>
