--- a/src/app/project-card/project-card.component.html
+++ b/src/app/project-card/project-card.component.html
@@ -1,1 +1,8 @@
-<p>project-card works!</p>
+<div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="..." alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Title</h5>
+      <p class="card-text">description</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
