--- a/src/app/title/title.component.css
+++ b/src/app/title/title.component.css
@@ -14,6 +14,11 @@
 
 .title-social {
     font-size: 2rem;
+    font-weight: 300;
+}
+
+.title-social:hover {
+    filter: brightness(50%);
 }
 
 #portrait-img {
