--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -2,7 +2,7 @@
     <div id="skills-inner-div">
         <h1 class="w-100 text-c1 p-2">Skills</h1>
         <p class="text-light p-2">{{ profileDetails["aboutMe"] }}</p>
-        <p class="text-light p-2">Throughout my life I've worked with:</p>
+        <p class="text-light p-2">In the past I've worked with:</p>
         <div class="d-flex p-2">
             <div
                 class="col-sm-6 d-flex flex-column container-fluid"
