--- a/src/app/experience/experience.component.css
+++ b/src/app/experience/experience.component.css
@@ -39,3 +39,7 @@
 .experience-position-description {
     font-size: 1rem!important;
 }
+
+.experience-position-skills {
+    font-size: 1rem!important;
+}
