--- a/src/app/project-card/project-card.component.html
+++ b/src/app/project-card/project-card.component.html
@@ -19,7 +19,7 @@
                 target="_blank"
                 rel='noopener noreferrer'
                 className="{{
-                    'small cursor-clickable project-footer-text m-0' +
+                    'small cursor-clickable project-footer-text m-0 fira-code' +
                         (!project.githubRepoName ? ' link-disabled' : '')
                 }}"
                 >See Source Code 
