--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -9,7 +9,7 @@
                 *ngFor="let arr of this.skillsArr"
             >
                 <div class="skill-table-row text-light d-flex" *ngFor="let s of arr">
-                    &gt; &nbsp; <p class="text-c1 skill-table-cell">{{s}}</p>
+                    &gt; &nbsp; <p class="text-c1 skill-table-cell fira-code">{{s}}</p>
                 </div>
         
             </div>
