--- a/src/app/title/title.component.css
+++ b/src/app/title/title.component.css
@@ -12,6 +12,11 @@
     font-weight: 300
 }
 
+#tagline-replace {
+    font-size: 2rem;
+    font-weight: 300
+}
+
 .title-social {
     font-size: 2rem;
     font-weight: 300;
