--- a/src/app/toc/toc.component.html
+++ b/src/app/toc/toc.component.html
@@ -4,7 +4,7 @@
             *ngFor="let s of this.sections"
             class="toc-item-div text-c1 d-flex"
         >
-            <p class="toc-item cursor-clickable" (click)="this.scrollTo(s.divID)">
+            <p class="toc-item cursor-clickable fira-code" (click)="this.scrollTo(s.divID)">
                 {{ s.name }}
             </p>
             &nbsp; &lt;
