--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -7,7 +7,7 @@
                 <ng-container *ngFor="let e of this.experiences" ngbNavItem={{e._id}}>
                     <button ngbNavLink>{{e.position}}</button>
                     <ng-template ngbNavContent>
-                        <p class="experience-position-company-time text-light">{{e.time}} @ {{e.company}}</p>
+                        <p class="experience-position-company-time text-light">{{e.formattedTime}} @ {{e.company}}</p>
                         <ul class="experience-position-description text-light">
                             <li *ngFor="let d of e.description">{{parseDescription(d)}}</li>
                         </ul>
