--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500&display=swap');
 
 * {
     margin: 0;
-    font-family: 'Fira Code', monospace;
+    font-family: 'Fira Sans', sans-serif;
 }
 
 a {
@@ -36,4 +37,8 @@ a {
 
 .cursor-clickable {
 	cursor: pointer;
+}
+
+.fira-code {
+    font-family: 'Fira Code', monospace;
 }
