--- a/react-portfolio/src/components/Footer.css
+++ b/react-portfolio/src/components/Footer.css
@@ -1,9 +1,13 @@
 #footer-div {
-    padding: 10rem;
+    padding: 5rem 2rem;
     padding-bottom: 0;
 }
 
 #footer-inner-div {
     width: 100%;
-    border-top: 5px solid #38BDAE;
+    border-top: 5px solid #38bdae;
+}
+
+.footer-link:hover {
+    filter: brightness(50%);
 }
